@@ -1,6 +1,5 @@
-#include <stdio.h>
 #include <stdlib.h>
-#include <unistd.h>
+#include <stdio.h>
 #include <AL/alut.h>
 
 /*
@@ -16,13 +15,17 @@ main (int argc, char **argv)
 #ifdef ALUT_API_MAJOR_VERSION
   if (alutGetMajorVersion () != ALUT_API_MAJOR_VERSION ||
       alutGetMinorVersion () != ALUT_API_MINOR_VERSION)
-    fprintf (stderr,
-	     "WARNING: The ALUT library is version %d.%d.x but the alut.h says it's %d.%d.x!!\n",
-	     alutGetMajorVersion (), alutGetMinorVersion (),
-	     ALUT_API_MAJOR_VERSION, ALUT_API_MINOR_VERSION);
+    {
+      fprintf (stderr,
+	       "WARNING: The ALUT library is version %d.%d.x but the alut.h says it's %d.%d.x!!\n",
+	       alutGetMajorVersion (), alutGetMinorVersion (),
+	       ALUT_API_MAJOR_VERSION, ALUT_API_MINOR_VERSION);
+    }
   else
-    fprintf (stderr, "The ALUT library is at version %d.%d.x.\n",
-	     alutGetMajorVersion (), alutGetMinorVersion ());
+    {
+      fprintf (stderr, "The ALUT library is at version %d.%d.x.\n",
+	       alutGetMajorVersion (), alutGetMinorVersion ());
+    }
 #else
   fprintf (stderr, "WARNING: Your copy of AL/alut.h is pre-1.0.0\n");
   fprintf (stderr, "But you are running the ALUT test suite from ALUT\n");
